# spotifycharts

./: PKG-INFO  README.rst  __init__.py  classes.py  configuration.env  downloader.py  exceptions.py  main.py  pyproject.toml  settings.py  setup.py
spotifycharts/: __init__.py  classes.py  configuration.env  constants.py  downloader.py  exceptions.py  functions.py  logging.py  settings.py
tests/: test_chartdata.py  test_download.py  test_downloader.py  test_get_all_dates.py  test_get_all_regions.py
tests/test_download/tested/: all_regional_weekly_charts_30-12-2019_05-01-2020.csv  all_viral_daily_charts_30-12-2019_05-01-2020.csv  all_viral_weekly_charts_30-12-2019_05-01-2020.csv  some_regional_daily_charts_30-12-2019_05-01-2020.csv  some_regional_weekly_charts_30-12-2019_05-01-2020.csv  some_viral_daily_charts_30-12-2019_05-01-2020.csv  some_viral_weekly_charts_30-12-2019_05-01-2020.csv
tests/test_get_all_dates/tested/: global_regional_daily_dates.csv  global_regional_weekly_dates.csv  global_viral_daily_dates.csv  global_viral_weekly_dates.csv
tests/test_get_all_regions/tested/: regional_weekly_regions.csv  viral_daily_regions.csv
